# Karmine

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
cr-matchmaking-backend/: .env  .env.example  dev.sh  pyproject.toml
cr-matchmaking-backend/app/: config.py  dependencies.py  main.py
cr-matchmaking-backend/app/models/: __init__.py  match.py  transaction.py  user.py
cr-matchmaking-backend/app/routers/: auth.py  users.py
cr-matchmaking-backend/app/schemas/: __init__.py  auth.py  balance.py  match.py  matchmaking.py  user.py
cr-matchmaking-backend/app/services/: auth_service.py  cr_api_service.py  user_service.py
cr-matchmaking-backend/app/utils/: exceptions.py  redis_client.py
cr-matchmaking-backend/docs/: architecture.md
